--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express-session": "^1.19.0",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
